--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ fixgit: &fixgit
         git config --global user.name "CircleCI"
 
         git branch -f master origin/master
-        git merge master --commit || git checkout -f "$CIRCLE_BRANCH"
+        git merge master --commit --no-edit || git checkout -f "$CIRCLE_BRANCH"
       fi
       git status
       git log --oneline HEAD~10..HEAD
